--- a/fake-review-cycles.html
+++ b/fake-review-cycles.html
@@ -4,48 +4,124 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Detecting Cycles in Reviews</title>
+  <title>Detecting Fake Review Cycles</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background: #f1f3f6; margin: 0; padding: 0; }
-    header { background-color: #2874f0; padding: 16px; color: white; font-size: 20px; font-weight: bold; text-align: center; }
-    .container { max-width: 960px; margin: 40px auto; background: white; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); padding: 32px; border-radius: 8px; }
-    h1 { color: #212121; margin-bottom: 20px; }
-    h2 { color: #2874f0; margin-top: 32px; }
-    p { color: #424242; line-height: 1.6; }
-    pre { background-color: #f7f7f7; padding: 16px; overflow-x: auto; border-left: 5px solid #2874f0; font-size: 14px; }
-    a.back { display: inline-block; margin-top: 30px; color: #2874f0; text-decoration: none; font-weight: bold; }
-    a.back:hover { text-decoration: underline; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #f1f3f6;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #2874f0;
+      padding: 16px;
+      color: white;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    .container {
+      max-width: 960px;
+      margin: 40px auto;
+      background: white;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      padding: 32px;
+      border-radius: 8px;
+    }
+
+    h1 {
+      color: #212121;
+      margin-bottom: 20px;
+    }
+
+    h2 {
+      color: #2874f0;
+      margin-top: 32px;
+    }
+
+    p {
+      color: #424242;
+      line-height: 1.6;
+    }
+
+    ul {
+      color: #424242;
+      padding-left: 20px;
+    }
+
+    pre {
+      background-color: #f7f7f7;
+      padding: 16px;
+      overflow-x: auto;
+      border-left: 5px solid #2874f0;
+      font-size: 14px;
+    }
+
+    a.back {
+      display: inline-block;
+      margin-top: 30px;
+      color: #2874f0;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a.back:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 
 <body>
   <header>Flipkart Business Case</header>
   <div class="container">
-    <h1>Detecting Cycles in Reviews</h1>
+    <h1>Detecting Fake Review Cycles</h1>
 
-    <h2>📌 Business Case</h2>
-    <p>Flipkart wants to detect review cycles where sellers and buyers post fake reviews for mutual benefit using multiple fake accounts.</p>
+    <h2>🛒 The Story</h2>
+    <p>Imagine a group of fake buyers and sellers forming a tight-knit network where they repeatedly give each other positive reviews using multiple accounts. These cycles deceive Flipkart’s rating system and boost visibility for low-quality or fraudulent products.</p>
+    <p>To ensure review authenticity, Flipkart must identify such coordinated behavior in real time — and that’s where graph algorithms step in.</p>
 
-    <h2>🧠 Algorithms Used</h2>
+    <h2>📌 Problem Statement</h2>
+    <p>We want to model user reviews as a directed graph and detect cycles which may indicate suspicious mutual-review behavior between users or sellers.</p>
+
+    <h2>🧠 Algorithmic Approach</h2>
     <ul>
-      <li><strong>Graph Traversal:</strong> Users are modeled as nodes, reviews as directed edges.</li>
-      <li><strong>Cycle Detection (DFS / Union-Find):</strong> Detect tightly knit communities.</li>
-      <li><strong>Connected Components:</strong> Identify suspicious clusters of accounts.</li>
+      <li><strong>Graph Modeling:</strong> Each user is a node; a review from one user to another forms a directed edge.</li>
+      <li><strong>Cycle Detection using DFS:</strong> To find circular patterns (A → B → C → A) that represent mutual boosting.</li>
+      <li><strong>Connected Components:</strong> Cluster analysis helps identify the scope and structure of fraudulent networks.</li>
     </ul>
 
-    <h2>🧠 Intuition</h2>
-    <p>Fake review rings behave like a small network of users giving each other good ratings repeatedly, which can be flagged by detecting cycles.</p>
+    <h2>📘 Concept Primer</h2>
+    <ul>
+      <li><strong>Depth-First Search (DFS):</strong> Explores as far as possible down a branch before backtracking. Useful for visiting all nodes and edges recursively.</li>
+      <li><strong>Cycle Detection in Directed Graphs:</strong> By using a recursion stack (`recStack`), we detect if we revisit a node in the same traversal path, indicating a cycle.</li>
+    </ul>
 
-    <h2>💥 Impact</h2>
-    <p>Reduces manipulation of product ratings and boosts trustworthiness of reviews for end customers.</p>
+    <h2>💡 Intuition</h2>
+    <p>In genuine reviews, the graph usually looks like a tree or a DAG (Directed Acyclic Graph). Cycles are rare unless users are intentionally manipulating the system — so detecting even small cycles can uncover significant fraud.</p>
 
-    <h2>💻 Sample Base Code (Cycle Detection - C++)</h2>
+    <h2>📊 Time & Space Complexity</h2>
+    <ul>
+      <li><strong>Time Complexity:</strong> O(V + E) — where V = number of users, E = number of reviews.</li>
+      <li><strong>Space Complexity:</strong> O(V) — for visited and recursion stack arrays.</li>
+    </ul>
+
+    <h2>💥 Business Impact</h2>
+    <ul>
+      <li>📈 <strong>Trust Restoration:</strong> Ensures that customers rely on authentic reviews.</li>
+      <li>🧠 <strong>Reputation Protection:</strong> Keeps the platform clean from bad actors.</li>
+      <li>⚙️ <strong>Operational Efficiency:</strong> Reduces manual review efforts by automating fraud detection.</li>
+      <li>📉 <strong>Reduced Returns:</strong> Because products with artificially inflated ratings are filtered out.</li>
+    </ul>
+
+    <h2>💻 C++ Implementation</h2>
     <pre><code>#include &lt;iostream&gt;
 #include &lt;vector&gt;
 using namespace std;
 
-bool dfs(int node, vector&lt;vector&lt;int&gt;&gt;& graph, vector&lt;bool&gt;& visited, vector&lt;bool&gt;& recStack) {
+bool dfs(int node, const vector&lt;vector&lt;int&gt;&gt;& graph, vector&lt;bool&gt;& visited, vector&lt;bool&gt;& recStack) {
     visited[node] = true;
     recStack[node] = true;
 
@@ -53,23 +129,30 @@ bool dfs(int node, vector&lt;vector&lt;int&gt;&gt;& graph, vector&lt;bool&gt;& v
         if (!visited[neighbor] && dfs(neighbor, graph, visited, recStack)) return true;
         else if (recStack[neighbor]) return true;
     }
+
     recStack[node] = false;
     return false;
 }
 
-bool hasCycle(vector&lt;vector&lt;int&gt;&gt;& graph, int n) {
+bool hasCycle(const vector&lt;vector&lt;int&gt;&gt;& graph, int n) {
     vector&lt;bool&gt; visited(n, false), recStack(n, false);
-    for (int i = 0; i &lt; n; i++)
-        if (!visited[i] && dfs(i, graph, visited, recStack)) return true;
+    for (int i = 0; i &lt; n; ++i)
+        if (!visited[i] && dfs(i, graph, visited, recStack))
+            return true;
     return false;
 }
 
 int main() {
-    int n = 4;
+    int n = 5; // Number of users
     vector&lt;vector&lt;int&gt;&gt; graph = {
-        {1}, {2}, {0}, {2}
+        {1},      // User 0 reviewed User 1
+        {2},      // User 1 reviewed User 2
+        {0},      // User 2 reviewed User 0 -> cycle!
+        {},       // User 3 is isolated
+        {3}       // User 4 reviewed User 3
     };
-    cout &lt;&lt; (hasCycle(graph, n) ? "Cycle detected" : "No cycle") &lt;&lt; endl;
+
+    cout &lt;&lt; (hasCycle(graph, n) ? "⚠️ Cycle Detected: Fraud suspected!" : "✅ No Cycle Detected") &lt;&lt; endl;
     return 0;
 }</code></pre>
 
