--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <div class="project-card">
         <div class="project-text">
           <h3>Smart Product Recommender</h3>
+          <a href="smart-product.html">
           <p>
             Built a model which ranks the results based on relevance. 
           </p>
@@ -71,6 +72,7 @@
       <div class="project-card reverse">
         <div class="project-text">
           <h3>Multi-Layered Answer Generation System</h3>
+          <a href="multi-layer.html.html">
           <p>
             Developed a query resolution system that dynamically generates three tiers of responses — Beginner, Intermediate, and Expert — for any user input.
           </p>
