--- a/index.html
+++ b/index.html
@@ -55,32 +55,35 @@
     </section>
 
     <section id="projects" class="section-card">
-      <h2>Projects</h2>
+  <h2>Projects</h2>
 
-      <div class="project-card">
-        <div class="project-text">
-          <h3>Smart Product Recommender</h3>
-          <a href="smart-product.html">
-          <p>
-            Built a model which ranks the results based on relevance. 
-          </p>
-          <p><strong>Tech:</strong> Python</p>
-        </div>
-        <img src="assets/project1.png" alt="Project 1" />
-      </div>
+  <div class="project-card">
+    <div class="project-text">
+      <a href="smart-product.html">
+        <h3>Smart Product Recommender</h3>
+      </a>
+      <p>
+        Built a model which ranks the results based on relevance. 
+      </p>
+      <p><strong>Tech:</strong> Python</p>
+    </div>
+    <img src="assets/project1.png" alt="Project 1" />
+  </div>
 
-      <div class="project-card reverse">
-        <div class="project-text">
-          <h3>Multi-Layered Answer Generation System</h3>
-          <a href="multi-layer.html.html">
-          <p>
-            Developed a query resolution system that dynamically generates three tiers of responses — Beginner, Intermediate, and Expert — for any user input.
-          </p>
-          <p><strong>Tech:</strong> Python</p>
-        </div>
-        <img src="assets/project2.png" alt="Project 2" />
-      </div>
-    </section>
+  <div class="project-card reverse">
+    <div class="project-text">
+      <a href="multi-layer.html">
+        <h3>Multi-Layered Answer Generation System</h3>
+      </a>
+      <p>
+        Developed a query resolution system that dynamically generates three tiers of responses — Beginner, Intermediate, and Expert — for any user input.
+      </p>
+      <p><strong>Tech:</strong> Python</p>
+    </div>
+    <img src="assets/project2.png" alt="Project 2" />
+  </div>
+</section>
+
 
     <section id="flipkart-business-case" class="section-card">
       <h2>Dream Company: Flipkart</h2>
