--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
     <section id="flipkart-business-case" class="section-card">
-      <h2>Dream Company: Flipkart</h2>
+      <h2>Business Cases for Flipkart</h2>
       <p>
         Flipkart, India’s leading e-commerce platform, has been instrumental in democratizing online shopping. My passion for scalable personalization and fair ranking systems aligns with Flipkart’s mission.
       </p>
@@ -94,7 +94,7 @@
       <div class="business-case">
         <img src="assets/niche-category.png" alt="Niche Categories" />
         <div>
-          <h3>Business Case 1: Improving Ranking in Niche Categories</h3>
+          <h3>Improving Ranking in Niche Categories</h3>
           <p><strong>Problem:</strong> Poor relevance in low-signal or niche categories.</p>
           <p><strong>Proposal:</strong> A hybrid personalization model using content filtering and session signals.</p>
           <p><strong>Impact:</strong> Better visibility, increased engagement, and improved conversion.</p>
@@ -104,7 +104,7 @@
       <div class="business-case reverse">
         <img src="assets/seller-bias.png" alt="Seller Promotion Bias" />
         <div>
-          <h3>Business Case 2: Reducing Seller Promotion Bias</h3>
+          <h3>Reducing Seller Promotion Bias</h3>
           <p><strong>Problem:</strong> Top sellers dominate rankings due to boosts, lowering variety.</p>
           <p><strong>Proposal:</strong> Introduce a fairness-aware re-ranking layer to balance exposure.</p>
           <p><strong>Impact:</strong> Improved trust, fair seller ecosystem, and increased user satisfaction.</p>
