--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#academics">Academics</a></li>
+        <li><a href="#course">Course</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#flipkart-business-case">Flipkart</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -44,15 +44,22 @@
       </p>
     </section>
 
-    <section id="academics" class="section-card">
-      <h2>Academics</h2>
-      <ul>
-        <li><strong>Degree:</strong> B.E in Computer Science</li>
-        <li><strong>Institution:</strong> KLE Technological University, Hubli</li>
-        <li><strong>CGPA:</strong> 9.54 / 10</li>
-        <li><strong>Relevant Courses:</strong> Data Structures, Algorithms, Web Development, DBMS, OS</li>
-      </ul>
-    </section>
+    <section id="course" class="section-card">
+  <h2>Course</h2>
+
+  <div class="project-card">
+    <div class="project-text">
+      <h3>Algorithm Solving</h3>
+      <p><strong>Course Code:</strong> 23E309</p>
+      <p><strong>Student Name:</strong> Jiha</p>
+      <p><strong>SRN:</strong> 01FE21BCS094</p>
+      <p><strong>Course Instructor:</strong> Prakash Hegade</p>
+      <p><strong>University:</strong> Klogical University, Huli-31</p>
+      <p><strong>Portfolio Topic/Domain:</strong> Google</p>
+    </div>
+  </div>
+</section>
+
 
     <section id="projects" class="section-card">
   <h2>Projects</h2>
