--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
   <div class="project-card">
     <div class="project-text">
       <h3>Algorithm Solving</h3>
-      <p><strong>Course Code:</strong> 23E309</p>
-      <p><strong>Student Name:</strong> Jiha</p>
-      <p><strong>SRN:</strong> 01FE21BCS094</p>
+      <p><strong>Course Code:</strong> 23ECSE309</p>
+      <p><strong>Student Name:</strong> Shrishail Golappanavar</p>
+      <p><strong>SRN:</strong> 01FE22BCS158</p>
       <p><strong>Course Instructor:</strong> Prakash Hegade</p>
-      <p><strong>University:</strong> Klogical University, Huli-31</p>
-      <p><strong>Portfolio Topic/Domain:</strong> Google</p>
+      <p><strong>University:</strong> KLE Technological University, Huli-31</p>
+      <p><strong>Portfolio Topic/Domain:</strong> Flipkart (Ecommerce)</p>
     </div>
   </div>
 </section>
