--- a/index.html
+++ b/index.html
@@ -218,9 +218,7 @@
     <section id="contact" class="section-card">
       <h2>Contact</h2>
       <ul>
-        <li>Email: shrishail.g@gmail.com</li>
-        <li>GitHub: <a href="https://github.com/shrishail" target="_blank" rel="noopener noreferrer">github.com/shrishail</a></li>
-        <li>LinkedIn: <a href="https://linkedin.com/in/shrishail" target="_blank" rel="noopener noreferrer">linkedin.com/in/shrishail</a></li>
+        <li>Email: shrishailgolappanavar11@gmail.com</li>
       </ul>
     </section>
   </main>
